--- a/Algorithm/test.ipynb
+++ b/Algorithm/test.ipynb
@@ -226,22 +226,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "id": "d16da256",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    def moveZeroes( nums):\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify nums in-place instead.\n",
+    "        \"\"\"\n",
+    "        for i in range(len(nums)):\n",
+    "            if (nums[i] == 0) & (i < len(nums)):\n",
+    "                \n",
+    "                for j in range(i, len(nums)-1):\n",
+    "                    a = nums[j]\n",
+    "                    nums[j] = nums[j+1]\n",
+    "                    nums[j+1] = a\n",
+    "#                     nums[j], nums[j+1] = nums[j+1], nums[j]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d380b525",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lis = [0,1,0,0,1,2,3,4,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "678ff6ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "moveZeroes(lis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7249f73f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Solution() takes no arguments",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-51-f70978cab01b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mSolution\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlis_1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlis_2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: Solution() takes no arguments"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 0, 1, 2, 3, 4, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "lis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22b65871",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
